added new p tag ids for enemies and ranks, as well as styling

--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,10 @@ button {
   bottom: 0;
 }
 
+.rank-container {
+  display: inline-block;
+}
+
 #prompt-input {
   z-index: 1;
   font-family: 'Ubuntu Mono', sans-serif;
